# palindrome

./: Cargo.toml  README.md
bs_crate/: Cargo.toml  README.md
bs_crate/src/: lib.rs
src/: main.rs
